Add configs for Menu

--- a/configs/MenuButton.yaml
+++ b/configs/MenuButton.yaml
@@ -1,14 +1,16 @@
 image_s:
   type: aimg
-  value: textures/MenuPauseButton.png
+  value: textures/MenuButton.png
 image_h:
   type: aimg
-  value: textures/MenuPauseButtonH.png
+  value: textures/MenuButtonH.png
 
-font_size: 20
+font_size: 22
 font_bold: true
 font: arial
 
 color_red: 240
 color_green: 240
 color_blue: 240
+
+padding: 15
