--- a/configs/menu_button.yaml
+++ b/configs/menu_button.yaml
@@ -1,7 +1,7 @@
-image_s:
+image_selected:
   type: aimg
   value: textures/MenuButton.png
-image_h:
+image_highlighted:
   type: aimg
   value: textures/MenuButtonH.png
 
