--- a/configs/menu_defence_button.yaml
+++ b/configs/menu_defence_button.yaml
@@ -1,7 +1,7 @@
-image_s:
+image_selected:
   type: aimg
   value: textures/menuDefenseButton.png
-image_h:
+image_highlighted:
   type: aimg
   value: textures/MenuDefenseButtonH.png
 image_d:
