--- a/configs/interface/MenuButton.yaml
+++ b/configs/interface/MenuButton.yaml
@@ -10,7 +10,7 @@ padding: 15
 
 image_s:
   type: aimg
-  value: default.png # TODO: change png file
+  value: textures/interface/MenuButton.png
 image_h:
   type: aimg
-  value: default.png # TODO: change png file
+  value: textures/interface/MenuButtonH.png
