--- a/configs/defense/DefenseLight.yaml
+++ b/configs/defense/DefenseLight.yaml
@@ -1,4 +1,4 @@
 anim_count: 2
-anim_source: default.png # TODO: change png file
+anim_source: images/default.png  # TODO: change png file
 anim_rate: 0.1
 anim_loop: false
