--- a/configs/defense/DefenseWall.yaml
+++ b/configs/defense/DefenseWall.yaml
@@ -5,4 +5,4 @@ rotate: false
 attack: none
 image:
   type: aimg
-  value: default.png # TODO: change png file
+  value: images/default.png  # TODO: change png file
