--- a/configs/defense/DefensePillbox.yaml
+++ b/configs/defense/DefensePillbox.yaml
@@ -4,7 +4,7 @@ cost: 280
 rotate: true
 flash_offset: 16
 attack: bullet
-bullet_type: AttackSmallBullet
+bullet_type: AttackBlueBullet
 attack_rate: 0.1
 attack_range: 200
 images: images/defense/DefensePillbox.png
