--- a/configs/defense/DefenseTurret.yaml
+++ b/configs/defense/DefenseTurret.yaml
@@ -1,4 +1,4 @@
-display_name: Pillbox
+display_name: Turret
 block: true
 cost: 280
 rotate: true
@@ -7,4 +7,4 @@ attack: bullet
 bullet_type: AttackBlueBullet
 attack_rate: 0.1
 attack_range: 200
-images: images/defense/DefensePillbox.png
+images: images/defense/DefenseTurret.png
